--- a/04-vars.yaml
+++ b/04-vars.yaml
@@ -8,4 +8,4 @@
   tasks:
     - name: Display course details
       ansible.builtin.debug:
-        msg: "Course is: {{ COURSE }}, Duration: {{ DURATION }}, Trainer: {{ TRAINER }}"
+        msg: "Course is: {{ COURSE }} \nDuration: {{ DURATION }} \nTrainer: {{ TRAINER }}"
