ansible scripts practice

--- a/04-vars.yaml
+++ b/04-vars.yaml
@@ -16,4 +16,4 @@
           Course is: {{ COURSE }}
           Duration: {{ DURATION }}
           Trainer: {{ TRAINER }}
-      versbosity: 1
+      verbosity: 1
