ansible scripts practice

--- a/04-vars.yaml
+++ b/04-vars.yaml
@@ -8,7 +8,7 @@
   tasks:
     - name: Display course details
       ansible.builtin.debug:
-        msg: "Course is: {{ COURSE }} Duration: {{ DURATION }} Trainer: {{ TRAINER }}"
+        msg: "Course is: {{ COURSE }}, Duration: {{ DURATION }}, Trainer: {{ TRAINER }}"
     
     - name: Display course details with multiline
       ansible.builtin.debug:
