--- a/09-vars-inventory-level.yaml
+++ b/09-vars-inventory-level.yaml
@@ -1,11 +1,7 @@
 - name: Inventory level variables
   hosts: local
   connection: local
-  vars_prompt:
-    - name: "my_variable"
-      prompt: "Enter a value for my_variable (this will be overridden by inventory variable if defined)"
-      private: no
   tasks:
     - name: Show inventory variables
       ansible.builtin.debug:
-        msg: 'The value of the variable from inventory is: {{ my_variable }}'
+        msg: "The value of the variable from inventory is defined about Course: {{ COURSE }}"
