--- a/11-vars-preference.yaml
+++ b/11-vars-preference.yaml
@@ -4,7 +4,7 @@
   vars:
     name: ansible from vars
   vars_files:
-    - vars.yml
+    - vars.yaml
   vars_prompt:
     - name: name
       prompt: "Enter your name"
