--- a/11-vars-preference.yaml
+++ b/11-vars-preference.yaml
@@ -2,7 +2,7 @@
   hosts: local
   connection: local
   vars:
-    NAME: ansible from vars
+    NAME: ansible from playbook
   # vars_files:
   #   - vars.yaml
   # vars_prompt:
