--- a/inventory.ini
+++ b/inventory.ini
@@ -6,6 +6,10 @@
 [backend]
 192.,78.98.35
 
+[credentials]
+ansible_user=ec2-user
+ansible_password="DevOps321"
+
 [roboshop:children]
 frontend
 backend
