--- a/13-conditions.yaml
+++ b/13-conditions.yaml
@@ -8,4 +8,5 @@
     - name: when condition
       debug:
         msg: "This task will run only if the condition is true."
-      when: my_var == "Hello!"
+      when: my_var == "Hello!" #since the condition is not true, it should not run, output should be skipping
+      
