--- a/14-loops.yaml
+++ b/14-loops.yaml
@@ -10,5 +10,5 @@
       loop:
         - nginx
         - git
-        - mongosh
+        - mongodb-org
       when: ansible_os_family == "RedHat"  #we can set condition using when OS family is RedHat
