--- a/15-copy.yaml
+++ b/15-copy.yaml
@@ -14,5 +14,5 @@
           gpgcheck=0
       register: copy_output
     - name: Display the output of copy module
-      ansible.builtin.debug: null
-      msg: "Output of mongodb repo copy process: {{ copy_output }}"
+      ansible.builtin.debug:
+        msg: "Output of mongodb repo copy process: {{ copy_output }}"
